objects/Opportunity_CheckList_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_CheckList_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity CheckList Id</label>
        <referenceTo>Opportunity_CheckList__c</referenceTo>
        <relationshipLabel>Opportunity CheckList Answers</relationshipLabel>
        <relationshipName>Opportunity_CheckList_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity CheckList Answers</relationshipLabel>
        <relationshipName>Opportunity_CheckList_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity CheckList Answer</label>
    <nameField>
        <label>Opportunity CheckList Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity CheckList Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>